--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/customers
 spring.datasource.username=postgres
 spring.datasource.password=1
 spring.sql.init.mode=always
+server.port=8090
