--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://tcp://docker:2376:5432/customers
+spring.datasource.url=jdbc:postgresql://docker:dind:5432/customers
 spring.datasource.username=postgres
 spring.datasource.password=1
 spring.sql.init.mode=always
