--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://springjob_db_1:5432/customers
+spring.datasource.url=jdbc:postgresql://jenkins-docker5432/customers
 spring.datasource.username=postgres
 spring.datasource.password=1
 spring.sql.init.mode=always
