--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
     build: .
     ports:
       - '8090:8090'
+    #network_mode: "host"
     container_name: bookapi
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://172.19.0.1:5432/customers
@@ -23,6 +24,7 @@ services:
       - db-data:/var/lib/postgresql/data
     ports:
       - 6432:5432
+    network_mode: "host"
 volumes:
   db-data:
     driver: local
