--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,6 +24,7 @@ services:
       - db-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    network_mode: "host"
 volumes:
   db-data:
     driver: local
