--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,8 @@ services:
     build: .
     ports:
       - '8090:8090'
-    #network_mode: "host"
+    networks:
+      - postgres
     container_name: bookapi
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/customers
@@ -24,7 +25,11 @@ services:
       - db-data:/var/lib/postgresql/data
     ports:
       - "6432:5432"
-    network_mode: service:db
+    networks:
+      - postgres
+networks:
+      postgres:
+        driver: bridge
 volumes:
   db-data:
     driver: local
