--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,8 +25,7 @@ services:
       - db-data:/var/lib/postgresql/data
     ports:
       - "6432:5432"
-    networks:
-      - postgres
+    network_mode: service:db
 networks:
       postgres:
         driver: bridge
