--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,6 +23,8 @@ services:
       POSTGRES_DB: customers
     volumes:
       - db-data:/var/lib/postgresql/data
+    networks:
+      - postgres
 networks:
       postgres:
         driver: bridge
