--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,8 @@ services:
       POSTGRES_DB: customers
     volumes:
       - db-data:/var/lib/postgresql/data
+    ports:
+      - 6432:5432
 volumes:
   db-data:
     driver: local
