--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://172.18.0.2:5432/customers
+spring.datasource.url=jdbc:postgresql://docker.db:5432/customers
 spring.datasource.username=postgres
 spring.datasource.password=1
 spring.sql.init.mode=always
