--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,11 +7,11 @@ services:
       - '8090:8090'
     container_name: bookapi
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://docker.db:5432/customers
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://host.docker.internal:5432/customers
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=1
     links:
-      - 'db:database'
+      - 'db'
   db:
     image: postgres:15.2
     restart: always
