--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/customers
+spring.datasource.url=jdbc:postgresql://localhost:5432/customers
 spring.datasource.username=postgres
 spring.datasource.password=1
 spring.sql.init.mode=always
 server.port=8090
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true
